--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,10 +27,12 @@ dist.dir=dist
 dist.jar=${dist.dir}/CapturaRFID.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.jSerialComm-1.3.11.jar=C:\\Users\\Hector.DESKTOP-FPI6763\\Downloads\\rfid\\jSerialComm-1.3.11.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.MySQLDriver.classpath}
+    ${libs.MySQLDriver.classpath}:\
+    ${file.reference.jSerialComm-1.3.11.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
