--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,11 +28,15 @@ dist.jar=${dist.dir}/CapturaRFID.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.jSerialComm-1.3.11.jar=C:\\Users\\Hector.DESKTOP-FPI6763\\Downloads\\rfid\\jSerialComm-1.3.11.jar
+file.reference.jSerialComm-1.3.11.jar-1=C:\\Users\\John Fredy\\Desktop\\jSerialComm-1.3.11.jar
+file.reference.jSerialComm-1.3.11.jar-2=jSerialComm-1.3.11.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
-    ${file.reference.jSerialComm-1.3.11.jar}
+    ${file.reference.jSerialComm-1.3.11.jar}:\
+    ${file.reference.jSerialComm-1.3.11.jar-1}:\
+    ${file.reference.jSerialComm-1.3.11.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
