--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,12 +29,14 @@ dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.jSerialComm-1.3.11.jar=jSerialComm-1.3.11.jar
 file.reference.jSerialComm-1.3.11.jar-1=C:\\Users\\John Fredy\\Desktop\\jSerialComm-1.3.11.jar
+file.reference.jSerialComm-2.0.2.jar=C:\\Users\\Hector\\Downloads\\jSerialComm-2.0.2.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
     ${file.reference.jSerialComm-1.3.11.jar-1}:\
-    ${file.reference.jSerialComm-1.3.11.jar}
+    ${file.reference.jSerialComm-1.3.11.jar}:\
+    ${file.reference.jSerialComm-2.0.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
